fixing colors and height of login + overflow when iphone5

--- a/app/assets/stylesheets/pages/_form-signin-login.scss
+++ b/app/assets/stylesheets/pages/_form-signin-login.scss
@@ -2,6 +2,12 @@
   background: asset-url('swimmer-bg.jpg'), linear-gradient(to bottom, #2502d3, #006fff 75%);
   background-size: cover;
   height: 100vh;
+  background-blend-mode: overlay;
+
+  .row {
+    top: 16%;
+    margin: 0px;
+  }
 }
 
 
@@ -79,6 +85,7 @@
   border: 1px solid $blue;
   border-width: 1px 1px 3px;
   margin-bottom: 10px;
+  overflow: auto;
 }
 
 .form-style-5-button:hover {
@@ -102,11 +109,10 @@
   padding-right: 24px !important;
   padding-left: 24px !important;
   background: #ffffff !important;
-  border-color: #767676 !important;
+  border-color: $blue !important;
 }
 
 .logo-google{
-
 
   img {
     height: 30px;
@@ -116,6 +122,21 @@
 }
 
 .text-google{
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
-  padding-left: 18px;
+  padding-left: 8px;
+  color: #2979FF;
+  padding-top: 2px;
+  overflow: auto;
+}
+
+fieldset {
+  legend {
+    color: $blue;
+    border-bottom-color: $blue;
+  }
+  label {
+    color: $blue;
+  }
 }
